# saafbir

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  uv.toml  vercel.json
api/: index.py
app/: db.py  main.py  routes_data.py  routes_export.py  routes_pickups.py  routes_reports.py
scripts/: import_csv.py  seed_mock.py
web/: app.html  app.js  index.html  styles.css
